--- a/views/partials/audio.hbs
+++ b/views/partials/audio.hbs
@@ -1,6 +1,8 @@
-<div class="containerAudio" id="containerAudio">
 
-  <h2 class="audioh">Музыка</h2>
+  <h2>Музыка</h2>
+
+<br>
+<p>Вся музыка доступна  <a href="https://vk.com/audios-16736325">здесь</a> </p>
 
   <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
@@ -11,18 +13,3 @@
   </script>
 </div>
 
-<style>
-  .audioh {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    color: #999;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 2em;
-    font-family: 'Poiret One', cursive;
-    text-align: center;
-    font-size: 80px;
-  }
-</style>
