--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -1,92 +1,17 @@
-<h2 class="contactss">Контакты</h2>
-<div class="card-container" id="card-container">
 
-
-{{!-- <div class="card border-info mb-3 card-contact" style="max-width: 18rem;">{{#each contacts}}
-    <div class="card-header"><b>Организатор, вдохновитель, производитель идей и беспорядка. {{job}}</b></div>
-    <div class="card-body text-info">
-      <p class="card-title">Борис Фаддеев{{nameJob}}</p>
-      <p class="card-title">E-mail: <a href="mailto:https://vk.com/brain_spb"> https://vk.com/brain_spb{{emailJob}}</a></p>
-      <p class="card-title">Tel.: 7 964 336-02-10{{telJob}}</p>
-    </div>
-    {{/each}}
-  </div> --}}
-
-   <div class="card border-info mb-3 card-contact" style="max-width: 18rem;">
-    <div class="card-header"><b>Организатор, вдохновитель, производитель идей и беспорядка.</b></div>
-    <div class="card-body text-info">
-      <p class="card-title">Борис Фаддеев</p>
-      <p class="card-title">E-mail: <a href="mailto:https://vk.com/brain_spb"> https://vk.com/brain_spb</a></p>
-      <p class="card-title">Tel.: 7 964 336-02-10</p>
-    </div>
-  </div> 
-
-  <div class="card border-info mb-3 card-contact" style="max-width: 18rem;">
-    <div class="card-header"><b>Директор</b></div>
-    <div class="card-body text-info">
-      <p class="card-title">Иван Иванович</p>
-
-      <p class="card-title">E-mail:
-        <!-- VK Widget -->
-        <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
-
-      <div id="vk_contact_us"></div>
-      <script type="text/javascript">
-        VK.Widgets.ContactUs("vk_contact_us", {}, -16736325);
-      </script>
-      <!-- VK Widget -->
-      </p>
-      <p class="card-title">Tel.: +7 000 000 00 00</p>
-    </div>
-  </div>
-
-  <div class="card border-info2 mb-3 card-contact2" style="max-width: 10rem;">
-
-    <div class="vkPodp"></div>
-    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
-
-    <!-- VK Widget -->
-    <div id="vk_groups"></div>
-    <script type="text/javascript">
-      VK.Widgets.Group("vk_groups", { mode: 3 }, 16736325);
-    </script>
-  </div>
-
-
-  <div class="card border-info2 mb-3 card-contact2" style="max-width: 18rem;">
-
-<iframe src="https://averin.pro/widget.php?l=dohemuli&style=1&width=250&gallery=1&s=80&icc=3&icr=3&t=1&tt=Мы в Инстаграм&h=1&ttcolor=808080&th=333333&bw=999999&bscolor=FFFFFF&bs=FF0000&ts=Подписаться&ch=utf8" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:350px; height: 490px" ></iframe>
-  </div>
-
-
-
-
-
-
+<h2>Контакты</h2>
+<br>
+<div class="contactdiv">
+  <p>Организатор, вдохновитель, производитель идей и беспорядка </p>
+  <p><b>Борис Фаддеев</b></p>
+  <p>E-mail: <a href="mailto:dobrorkestr@gmail.com"> dobrorkestr@gmail.com</a></p>
+  <p>WhatsApp:<a
+      href="https://api.whatsapp.com/send?phone=79643360210&data=AbteY_ulNkNXS39X_NspOmbTSwlhpqmQH0TWYfB4OOCfGgrS1GXEwuei8geeK_ILKklnes2IwLWOw3RV6jS7nKMbOIZgFwSERDEc3B16Do6D1G5Pps0oIzt31loW3X-HRRA&source=FB_Ads">пишите
+      сюда</a></p>
+  <p>Телефон.: 7 964 336-02-10</p>
+  
 
 </div>
 
-<style>
-  .card {
-    margin: 20px;
 
-  }
 
-  .card-body {
-    opacity: 0.9;
-  }
-
-  .contactss {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    color: #999;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 2em;
-    font-family: 'Poiret One', cursive;
-    text-align: center;
-    font-size: 80px;
-  }
-</style>
