--- a/views/partials/video.hbs
+++ b/views/partials/video.hbs
@@ -1,5 +1,9 @@
+  <h2>Наши выступления:</h2>
+  <br>
+    <div class="videolink">
+      <p><a href="https://vk.com/videos-16736325">Здесь</a>еще больше видео</p>
+    </div>
 <div class="video-container" id="video-container">
-  <h2 id="video-title">Наши выступления:</h3>
     <div class="videoDiv">
       <iframe width="440" height="240" src="https://www.youtube.com/embed/AzqLEIW5fR0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -16,15 +20,4 @@
       <iframe src="//vk.com/video_ext.php?oid=-16736325&id=456239029&hash=716a52cfca228522&hd=2" width="440"
         height="240" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div class="videolink">
-      <p><a href="https://vk.com/videos-16736325">Здесь еще больше видео</a></p>
-    </div>
-    {{!-- <div class="videoDiv">
-    <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239178&hash=a3152d779634f393&hd=2" width="440" height="240"
-      frameborder="0" allowfullscreen></iframe>
-      </div> --}}
-    {{!-- <div class="videoDiv">
-      <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239180&hash=8f2832d9440e3b67&hd=2" width="440" height="240"
-        frameborder="0" allowfullscreen></iframe>
-        </div> --}}
 </div>
