--- a/public/css/social.css
+++ b/public/css/social.css
@@ -1,178 +1,51 @@
-* {
-  margin: 0;
-  padding: 0;
+body{
+  padding:65px;
+  text-align:center;
+  font-family: 'Oswald', sans-serif;
+} 
+
+h1{
+color:#ffffff;
+font-weight:100;
+font-size: 70px;
+background-color: rgba(46, 80, 117, 0.36);
 }
 
-body {
-  background: #0A122A;
+.btn{
+  color:rgb(0, 0, 0);
+  font-weight: 200;
+  background:#aec427;
+  padding:10px 20px;
+  font-size:17px;
+  text-decoration:none;
+  letter-spacing:2px;
+  text-transform:uppercase;
+  margin:5px
 }
 
-/* Let's style the wrapper in such away that, 
-it should always be at the center of the browser */
-.wrapper {
-  position: absolute;
-  top: 5%;
-  left: 58%;
-  transform: translate(-50%, -50%);
-  width: 550px;
+.btn:hover{
+  border:none;
+  background:rgba(0, 0, 0, 0.4);
+  background:#fff;
+  border: solid 1px black;
+  padding:20px 20px; #000;
+  color:#1b1b1b;
 }
 
-/* Style the Un-order list by setting its list-style to none */
-.wrapper ul {
-  list-style: none;
+.footer{
+  font-size:8px;
+  color:#fff;
+  clear:both;
+  display:block;
+  letter-spacing:5px;
+  border:1px solid #fff;
+  padding:5px;
+  text-decoration:none;
+  width:210px;
+  margin:auto;
+  margin-top:400px;
 }
-
-/* Style the list items inside the UL list, by setting its width, height and line-height 
-  and float them to left and set its border and border-radius.
- */
-.wrapper ul li {
-  width: 40px;
-  height: 40px;
-  line-height: 75px;
-  margin: 0 10px;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 50%;
-  border: 5px solid #D8E2DC;
-  float: left;
-  transition: all 0.5s ease;
-}
-
-/* Style the icons by setting its color and margin-top value to 20px 
-to align it properly */
-.wrapper ul li .fa {
-  color: #D8E2DC;
-  margin-top: 20px;
-  transition: all 0.5s ease;
-}
-
-/* Now target the specific li classes for styling and use box-shadow effect to border and text-shadow effect
-  to icons for glowing effect and use transition property for smooth transition effect. */
-/*facebook*/
-.wrapper ul li:hover.facebook {
-  border: 5px solid #3b5998;
-  box-shadow: 0 0 15px #3b5998;
-  transition: all 0.5s ease;
-}
-
-.wrapper ul li:hover .fa-facebook {
-  color: #3b5998;
-  text-shadow: 0 0 15px #3b5998;
-  transition: all 0.5s ease;
-}
-
-/*twitter*/
-.wrapper ul li:hover.youtube {
-  border: 5px solid #f70202;
-  box-shadow: 0 0 15px #f70202;
-  transition: all 0.5s ease;
-}
-
-.wrapper ul li:hover .fa-youtube {
-  color: #f70202;
-  text-shadow: 0 0 15px #f70202;
-  transition: all 0.5s ease;
-}
-
-/* instagram */
-.wrapper ul li:hover.instagram {
-  border: 5px solid #bc2a8d;
-  box-shadow: 0 0 15px #bc2a8d;
-  transition: all 0.5s ease;
-}
-
-.wrapper ul li:hover .fa-instagram {
-  color: #bc2a8d;
-  text-shadow: 0 0 15px #bc2a8d;
-  transition: all 0.5s ease;
-}
-
-/* google */
-.wrapper ul li:hover.vk {
-  border: 5px solid #0ba7f0;
-  box-shadow: 0 0 15px #0ba7f0;
-  transition: all 0.5s ease;
-}
-
-.wrapper ul li:hover .fa-vk {
-  color: #0ba7f0;
-  text-shadow: 0 0 15px #0ba7f0;
-  transition: all 0.5s ease;
-}
-
-/* whatsapp */
-.wrapper ul li:hover.whatsapp {
-  border: 5px solid #4dc247;
-  box-shadow: 0 0 15px #4dc247;
-  transition: all 0.5s ease;
-}
-
-.wrapper ul li:hover .fa-whatsapp {
-  color: #4dc247;
-  text-shadow: 0 0 15px #4dc247;
-  transition: all 0.5s ease;
-}
-
-.wrapper ul li:hover.icon {
-  border: 5px solid #FFFFFF;
-  box-shadow: 0 0 15px #BFCDCA;
-  transition: all 0.5s ease;
-}
-
-.wrapper ul li:hover .fa-icon {
-  color: #BFCDCA;
-  text-shadow: 0 0 15px #BFCDCA;
-  transition: all 0.5s ease;
-}
-.fa-facebook:before {
-  position: relative;
-  top: -23px;
-}
-
-.fa-youtube:before {
-  position: relative;
-  top: -23px;
-}
-
-.fa-instagram:before {
-  position: relative;
-  top: -23px;
-}
-
-.fa-vk:before {
-  position: relative;
-  top: -23px;
-}
-
-.fa-whatsapp:before {
-  position: relative;
-  top: -23px;
-}
-
-
-/* media queries */
-
-@media screen and (max-width: 640px){
-  .wrapper {
-      width: 350px;
-  }
-  .wrapper ul li{
-      margin-top: 10px;
-  }
-  .wrapper ul li.google{
-      margin-left: 60px;
-  }
-}
-
-
-@media screen and (max-width: 340px){
-  .wrapper {
-      width: 150px;
-  }
-  .wrapper ul li{
-      margin:15px;
-  }
-  .wrapper ul li.google{
-      margin-left: 15px;
-  }
+#navbar{
+  margin: 50px;
+  margin-top: -50px;
 }
