--- a/public/css/video.css
+++ b/public/css/video.css
@@ -1,40 +1,17 @@
 .video-container {
-  display: inline-flex;
-  justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .videoDiv {
-  width: 20px;
-  height: 20px;
-  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  text-align: center;
   height: auto;
-}
-
-#video-title {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  color:#999;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 2em;
-  font-family: 'Poiret One', cursive;
-  text-align: center;
-  font-size:80px;
-}
-.videolink{
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  color:#999;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 2em;
-  font-family: 'Poiret One', cursive;
-  text-align: center;
-  font-size:20px;
+  margin: 40px;
+  padding: 10px;
 }
