--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,10 +10,8 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
 
-  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/social.css">
-  <link rel="stylesheet" href="/css/table.css">
-  <link rel="stylesheet" href="/css/contact.css">
+  <link rel="stylesheet" href="/css/adaptive.css">
   <link rel="stylesheet" href="/css/video.css">
   <link rel="icon" type="image/png" href="images/icon.png">
   <title>Добровольный Оркестр Хемулей</title>
@@ -22,13 +20,7 @@
 <body>
   {{>navbar}}
   {{{body}}}
-  {{>carousel}}
-  {{>about}}
-  {{>audio}}
-  {{>video}}
-  {{>afisha}}
-  {{>contact}}
-  {{>footer}}
+  {{>footer}}  
 </body>
 
 </html>
