--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,9 +1,11 @@
-<script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
 <footer class="site-footer">
   <div class="container">
     <div class="row">
+
       <div class="col-xs-6 col-md-3">
-        <img src="images/icon.png" class="iconFooter">
+        <div ><img src="images/icon.png" class="iconFooter"></div>
+
+
       </div>
 
       <div class="col-sm-12 col-md-6">
@@ -19,74 +21,81 @@
       <div class="col-xs-6 col-md-3">
         <h6>МЕНЮ</h6>
         <ul class="footer-links">
-          <li><a href="#card-container-about">О нас</a></li>
-          <li><a href="#containerAudio">Музыка</a></li>
-          <li><a href="#video-container">Видео</a></li>
-          <li><a href="#card-container-afisha">Афиша</a></li>
-          <li><a href="#card-container">Контакты</a></li>
+          <li><a href="/about">О нас</a></li>
+          <li><a href="/news">Новости</a></li>
+          <li> <a href="/music">Музыка</a></li>
+          <li><a href="/video">Видео</a></li>
+          <li> <a href="/contact">Контакты</a></li>
         </ul>
-      </div>
-    </div>
-    <br>
-    <hr>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-sm-6 col-xs-12">
-        <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved
-        </p>
+        <div>
+          <ul class="social-icons">
+            <li><a class="facebook" href="https://www.facebook.com/pg/dobrorkestr"><i
+                  class="fa fa-facebook bottom-icons"></i></a></li>
+            <li><a class="youtube" href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i
+                  class="fa fa-youtube bottom-icons"></i></a></li>
+            <li><a class="vk" href="https://vk.com/dobr_orkestr"><i class="fa fa-vk bottom-icons"></i></a></li>
+            <li><a class="instagram" href="https://www.instagram.com/dohemuli/"><i
+                  class="fa fa-instagram bottom-icons"></i></a></li>
+          </ul>
+        </div>
       </div>
 
-      <div class="col-md-4 col-sm-6 col-xs-12">
-        <ul class="social-icons">
-          <li><a class="facebook" href="https://www.facebook.com/pg/dobrorkestr"><i
-                class="fa fa-facebook bottom-icons"></i></a></li>
-          <li><a class="youtube" href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i
-                class="fa fa-youtube bottom-icons"></i></a></li>
-          <li><a class="vk" href="https://vk.com/dobr_orkestr"><i class="fa fa-vk bottom-icons"></i></a></li>
-          <li><a class="instagram" href="https://www.instagram.com/dohemuli/"><i
-                class="fa fa-instagram bottom-icons"></i></a></li>
-        </ul>
+    </div>
+
+    <hr>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved
+          </p>
+          <p><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fdobrorkestr%2F&width=177&layout=button&action=like&size=small&share=true&height=65&appId" width="177" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></p>
+        </div>
       </div>
     </div>
+
   </div>
 </footer>
+
+
 <style>
+  .row{
+    display: flex;
+    justify-content: center;
+  }
+  .site-footer {
+    padding: 45px 0 20px;
+    font-size: 15px;
+    line-height: 24px;
+    color: #000000;
+    text-align: center;
+  }
+
   .iconFooter {
-    width: 300px;
     height: 300px;
-    margin-left: -50px;
+   /* margin-left: -80px;*/
     margin-bottom: -40px;
 
   }
 
   .bottom-icons {
-    position: relative;
     bottom: -56%;
-  }
+    line-height: 0px;
 
-  .site-footer {
-    padding: 45px 0 20px;
-    font-size: 15px;
-    line-height: 24px;
-    color: #737373;
-  }
-
-  .site-footer hr {
-    border-top-color: #bbb;
-    opacity: 0.5
   }
 
   .site-footer hr.small {
-    margin: 20px 0
+    margin: 20px 0;
+
   }
 
   .site-footer h6 {
-    color: #fff;
-    font-size: 16px;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
     text-transform: uppercase;
     margin-top: 5px;
-    letter-spacing: 2px
+    letter-spacing: 2px;
+
   }
 
   .site-footer a {
@@ -100,15 +109,20 @@
 
   .footer-links {
     padding-left: 0;
-    list-style: none
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
   }
 
   .footer-links li {
-    display: inline-flex;
+    align-content: center;
+    font-family: 'Oswald', sans-serif;
   }
 
   .footer-links a {
-    color: #737373
+    color: #060053;
+
   }
 
   .footer-links a:active,
@@ -127,18 +141,22 @@
   }
 
   .site-footer .social-icons a {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
     margin-left: 6px;
     margin-right: 0;
     border-radius: 100%;
-    background-color: #33353d
+    background-color: #aec427
   }
 
-  .copyright-text {
-    margin: 0
+
+  .col-xs-6 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
+
 
   @media (max-width:991px) {
     .site-footer [class^=col-] {
@@ -160,7 +178,9 @@
   .social-icons {
     padding-left: 0;
     margin-bottom: 0;
-    list-style: none
+    list-style: none;
+    display: flex;
+    justify-content: center;
   }
 
   .social-icons li {
@@ -178,7 +198,7 @@
 
   .social-icons a {
     background-color: #eceeef;
-    color: #818a91;
+    color: #012c4d;
     font-size: 16px;
     display: inline-block;
     line-height: 44px;
@@ -195,8 +215,8 @@
   .social-icons a:active,
   .social-icons a:focus,
   .social-icons a:hover {
-    color: #fff;
-    background-color: #29aafe
+    color: rgb(0, 0, 0);
+    /*background-color: #54da5b*/
   }
 
   .social-icons.size-sm a {
@@ -210,16 +230,16 @@
     background-color: #3b5998
   }
 
-  .social-icons a.twitter:hover {
-    background-color: #00aced
+  .social-icons a.youtube:hover {
+    background-color: #ff0000
   }
 
-  .social-icons a.linkedin:hover {
-    background-color: #007bb6
+  .social-icons a.vk:hover {
+    background-color: #13668d
   }
 
-  .social-icons a.dribbble:hover {
-    background-color: #ea4c89
+  .social-icons a.instagram:hover {
+    background-color: #cf32a8
   }
 
   @media (max-width:767px) {
@@ -230,49 +250,24 @@
     }
   }
 
-  .text-justify {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    color: #999;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 2em;
-    font-family: 'Poiret One', cursive;
-    text-align: center;
-    font-size: 20px;
-  }
+
 
   p {
     display: flex;
     justify-content: center;
-    width: 100%;
-    color: #999;
-    display: flex;
+    color: rgb(0, 0, 0);
     flex-direction: row;
-    justify-content: center;
-    font-family: 'Poiret One', cursive;
+    font-family: 'Oswald', sans-serif;
     text-align: center;
     font-size: 20px;
+
   }
 
-  h6 {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    color: #fff;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-family: 'Poiret One', cursive;
-    text-align: center;
-    font-size: 20px;
-  }
+
 
   .footer-links {
     width: 100%;
-    color: #999;
+    color: rgb(0, 0, 0);
     font-family: 'Poiret One', cursive;
     font-size: 20px;
   }
