--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,107 +1,17 @@
-{{!-- <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'> --}}
-<div class="invert-button"><style id="inverter" media="none">
-  html:not(.videoDiv) { background-color: #eee; filter: invert(100%) }
-  * { background-color: inherit }
-  img:not([src*=".svg"]):not(.videoDiv), [style*="url("] { filter: invert(100%) }
-</style>
-<div class="wrap">
-  <label class="button">
-    <input type="checkbox" id="themer">
-    Светлая тема: <span aria-hidden="true"></span>
-  </label>
-</div>
-<style>
-  .invert-button:not(.videoDiv) {
-    width: 276px;
-    height: 20px;
-    position:static;
-    top: 0%;
-    left:-2%;
-  }
-  html:not(.videoDiv) {
-  font-family: sans-serif;
-  line-height: 1.5;
-  color: #222;
-  height: 100%;
-}
+<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 
-.wrap:not(.videoDiv) {
-  margin: 0;
-  max-width: 40rem;
-  margin: 0 auto;
-  padding: 1.5rem;
-}
-
-* {
-  margin: 0;
-  color: inherit; 
-}
-
-* + *:not(li):not(body) {
-  margin-top: 1.5rem;
-}
-
-img:not(.videoDiv) {
-  max-width: 100%;
-  height: auto;
-}
-  
-.box:not(.videoDiv) {
-  padding: 1.5rem;
-  border: 2px solid;
-  background-color: #ccc;
-}
-
-.button:not(.videoDiv) {
-  background: #000;
-  padding: 0.5rem 1.5rem;
-  color: #fff;
-  border-radius: 0.25rem;
-}
-
-.button:not(.videoDiv) [type="checkbox"] {
-  position: absolute;
-  left: -9999px;
-}
-
-.button:not(.videoDiv) [type="checkbox"] + span::before {
-  content: 'off';
-}
-
-.button:not(.videoDiv) [type="checkbox"]:checked + span::before {
-  content: 'on';
-}
-</style>
-<script>var checkbox = document.getElementById('themer');
-var invertor = document.getElementById('inverter');
-
-checkbox.addEventListener('change', function () {
-  // Triggers repaint in most browsers:
-  invertor.setAttribute('media', this.checked ? 'screen' : 'none');
-  // Forces repaint in Chrome:
-  invertor.textContent = invertor.textContent.trim();
-});</script></div>
-<div class="wrapper">
-  <ul>
-    {{!-- <li class="icon"><a><img class="iconNav" src="images/icon.png"></a></li> --}}
-    <li class="facebook"><a href="https://www.facebook.com/pg/dobrorkestr"><i
-          class="fa fa-facebook " aria-hidden="true"></i></a></li>
-    <li class="youtube"><a href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i class="fa fa-youtube "
-          aria-hidden="true"></i></a></li>
-    <li class="vk"><a href="https://vk.com/dobr_orkestr"><i class="fa fa-vk " aria-hidden="true"></i></a></li>
-    <li class="instagram"><a href="https://www.instagram.com/dohemuli/"><i
-          class="fa fa-instagram " aria-hidden="true"></i></a></li>
-    <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=79643360210&data=Abtq5E3QdaKQ3Fsu_ED0gDmMGMcUD9dQXewLtzJx_YNw07QUzxpWPIas43em62A08TRO3dna__Q8BMGXS81y5eQbZXNwmarvvZJsX1XIo_U4Fnutlo3N1t8ek9yCot10Orw&source=FB_Ads"><i class="fa fa-whatsapp " aria-hidden="true"></i></a></li>
-  </ul>
-</div>
 <div id="navbar">
-  <a href="#card-container-about" class="btn onas">О нас</a>
-  <a href="#card-container-afisha" class="btn">Афиша</a>
-  <a href="#video-container" class="btn">Видео</a>
-  <a href="#containerAudio" class="btn">Музыка</a>
-  <a href="#card-container" class="btn">Контакты</a>
+  <a href="/" class="btn"> Главная </a>
+  <a href="/about" class="btn">О нас</a>
+  <a href="/news" class="btn">Новости</a>
+  <a href="/music" class="btn">Музыка</a>
+  <a href="/video" class="btn">Видео</a>
+  <a href="/contact" class="btn">Контакты</a>
 </div>
-<style>
+
+
+
+ {{!-- <style>
   * {
     -webkit-transition-property: all;
     -webkit-transition-duration: .2s;
@@ -109,78 +19,7 @@ checkbox.addEventListener('change', function () {
     -moz-transition-property: all;
     -moz-transition-timing-function: cubic-bezier(100, 50, 21, 6);
   }
+  </style> 
+ 
+ --}}
 
-  .iconNav {
-    width: 40px;
-    height: 40px;
-    margin-left: -3%;
-    margin-top: -47px;
-  }
-
-  body {
-    background: #1b1b2b;
-    padding: 75px;
-    text-align: center;
-    font-family: 'Oswald', sans-serif;
-
-  }
-
-  .btn {
-    color: #999;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-    font-size: 12px;
-    text-decoration: none;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-  }
-  .onas {
-    margin-top: 24px;
-  }
-  {{!-- #navbar {
-    margin: 0;
-  } --}}
-
-  .btn:hover {
-    border: none;
-    background: rgba(0, 0, 0, 0.4);
-    background: #fff;
-    padding: 20px 20px;
-    #000;
-    color: #1b1b1b;
-  }
-
-  .footer {
-    font-size: 8px;
-    color: #fff;
-    clear: both;
-    display: block;
-    letter-spacing: 5px;
-    border: 1px solid #fff;
-    padding: 5px;
-    text-decoration: none;
-    width: 210px;
-    margin: auto;
-    margin-top: 400px;
-  }
-</style>
-
-<script>
-  // When the user scrolls the page, execute myFunction
-  window.onscroll = function () { myFunction() };
-
-  // Get the navbar
-  var navbar = document.getElementById("navbar");
-
-  // Get the offset position of the navbar
-  var sticky = navbar.offsetTop;
-
-  // Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
-  function myFunction() {
-    if (window.pageYOffset >= sticky) {
-      navbar.classList.add("sticky")
-    } else {
-      navbar.classList.remove("sticky");
-    }
-  }
-</script>
