--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -6,7 +6,7 @@
     <div class=" wrapper exmpl">
 
       <img
-        src="https://scontent-frt3-2.xx.fbcdn.net/v/t1.0-9/s960x960/67719842_2457529350935016_635653660864413696_o.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_ohc=BmwoCaQUMjIAX_9XwJi&_nc_ht=scontent-frt3-2.xx&_nc_tp=7&oh=17a5b5f4d732eb3753bad73ea4001890&oe=5EEC7A41"
+        src="https://scontent.fhel6-1.fna.fbcdn.net/v/t1.0-9/67719842_2457529350935016_635653660864413696_o.jpg?_nc_cat=103&_nc_sid=730e14&_nc_ohc=R1oc-JaYQp4AX8pMdDm&_nc_ht=scontent.fhel6-1.fna&oh=cf8c03e85bda55701c2580fa30266918&oe=5F180684"
         class="card-img-top" alt="...">
     </div>
 
@@ -46,7 +46,7 @@
   <div class="card wrapper exmpl" style="width: 20rem;">
     <div class=" wrapper exmpl">
       <img
-        src="https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/s960x960/83006529_10222310872546911_4451792258672361472_o.jpg?_nc_cat=106&_nc_sid=85a577&_nc_ohc=vbn3LfGlWpsAX8vFTGG&_nc_ht=scontent-frt3-1.xx&_nc_tp=7&oh=a08a44a5bd19d2e73d3fe8c0e2425be7&oe=5EEF4574"
+        src="https://scontent.fhel3-1.fna.fbcdn.net/v/t1.0-9/83006529_10222310872546911_4451792258672361472_o.jpg?_nc_cat=106&_nc_sid=09cbfe&_nc_ohc=dsCcGNV1fXAAX8s0I6i&_nc_ht=scontent.fhel3-1.fna&oh=256633983dc40280e32322f5104a9c21&oe=5F1A984C"
         class="card-img-top" alt="...">
     </div>
 
